--- a/app/pages/common/header.pug
+++ b/app/pages/common/header.pug
@@ -1,1 +1,19 @@
 header.header
+    .container.header__container
+        a.logo.header__logo(href="#")
+            svg.logo__svg
+                use(xlink:href='img/sprite.svg#logo__icon')
+            span.logo__txt Trafalgar
+
+        nav.nav
+            ul.nav__list
+                li.nav__item
+                    a.nav__link(href="#") Home
+                li.nav__item
+                    a.nav__link(href="#") Find a doctor
+                li.nav__item
+                    a.nav__link(href="#") Apps
+                li.nav__item
+                    a.nav__link(href="#") Testimonials
+                li.nav__item
+                    a.nav__link(href="#") About us
