Made a responsive version of the header

--- a/app/pages/common/header.pug
+++ b/app/pages/common/header.pug
@@ -17,3 +17,10 @@ header.header
                     a.nav__link(href="#") Testimonials
                 li.nav__item
                     a.nav__link(href="#") About us
+
+        .burger
+            span.burger__line
+            span.burger__line
+            span.burger__line
+            span.burger__line
+            span.burger__line
