--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -6,6 +6,11 @@
         align-items: center;
         justify-content: space-between;
     }
+
+    @include media(700) {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
 }
 
 .logo {
