Completely made the services section

--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -109,7 +109,7 @@
 }
 
 .btn {
-    display: inline-block;
+    display: block;
     border: 1.4px solid $mainColor;
     border-radius: 55px;
     width: 200px;
