--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -5,5 +5,6 @@
 @import "settings";
 @import "./components/header";
 @import "./components/hero";
+@import "./components/services";
 @import "./components/burger";
 @import "./components/footer";
