Made a download section

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -4,7 +4,8 @@
 @import "vendor";
 @import "settings";
 @import "./components/header";
+@import "./components/burger";
 @import "./components/hero";
 @import "./components/services";
-@import "./components/burger";
+@import "./components/download";
 @import "./components/footer";
