--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -3,3 +3,4 @@ extends common/layout
 block content
     include includes/index/hero.pug
     include includes/index/services.pug
+    include includes/index/download.pug
