--- a/app/scss/components/_services.scss
+++ b/app/scss/components/_services.scss
@@ -96,15 +96,17 @@
 .card {
     justify-self: center;
     border-radius: 20px;
-    padding: 34px 40px;
+    padding: 68px 40px 39px;
     box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
     background-color: #fff;
 
     &__svg {
-        width: 70px;
+        width: 90px;
+        height: 90px;
     }
 
     &__title {
+        margin-top: 20px;
         font-weight: 700;
         font-size: 24px;
         color: #000;
@@ -126,7 +128,7 @@
         }
 
         &__title {
-            margin-top: -30px;
+            margin-top: 0;
             font-size: 20px;
         }
 
