Made a footer section

--- a/app/pages/includes/index/articles.pug
+++ b/app/pages/includes/index/articles.pug
@@ -9,7 +9,7 @@ section.articles
                     h3.articles__title Disease detection, check up in the laboratory
                     p.articles__parag In this case, the role of the health laboratory is very important to do a disease detection...
                     a.articles__link
-                        span.articles__span Read more
+                        |Read more
                         svg.articles__svg
                             use(xlink:href='img/sprite.svg#arrow_right')
             li.articles__item
@@ -18,7 +18,7 @@ section.articles
                     h3.articles__title Herbal medicines that are safe for consumption
                     p.articles__parag Herbal medicine is very widely used at this time because of its very good for your health...
                     a.articles__link
-                        span.articles__span Read more
+                        |Read more
                         svg.articles__svg
                             use(xlink:href='img/sprite.svg#arrow_right')
             li.articles__item
@@ -27,7 +27,7 @@ section.articles
                     h3.articles__title Natural care for healthy facial skin
                     p.articles__parag A healthy lifestyle should start from now and also for your skin health. There are some...
                     a.articles__link
-                        span.articles__span Read more
+                        |Read more
                         svg.articles__svg
                             use(xlink:href='img/sprite.svg#arrow_right')
 
