--- a/app/pages/includes/index/download.pug
+++ b/app/pages/includes/index/download.pug
@@ -12,6 +12,6 @@ section.download
                 h2.download__title Download our mobile apps
                 p.download__parag Our dedicated patient engagement app and web portal allow you to access information instantaneously (no tedeous form, long calls, or administrative hassle) and securely
                 button.btn.download__btn 
-                    span.btn__txt Download
+                    |Download
                     svg.download__arrow_down
                         use(xlink:href='img/sprite.svg#arrow_down')
