--- a/app/pages/common/footer.pug
+++ b/app/pages/common/footer.pug
@@ -1,1 +1,45 @@
 footer.footer
+    .container.footer__container
+        .footer__txt
+            a.logo.logo_bgc_main.footer__logo(href="#")
+                svg.logo__svg
+                    use(xlink:href='img/sprite.svg#logo__icon')
+                span.logo__txt Trafalgar
+            p.footer__parag Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone
+            p.footer__copy ©Trafalgar PTY LTD 2020. All rights reserved
+
+        ul.footer__list
+            li.footer__item
+                |Company
+            li.footer__item
+                a.footer__link(href="#") About
+            li.footer__item
+                a.footer__link(href="#") Testimonials
+            li.footer__item
+                a.footer__link(href="#") Find a doctor
+            li.footer__item
+                a.footer__link(href="#") Apps
+
+        ul.footer__list
+            li.footer__item
+                |Region
+            li.footer__item
+                a.footer__link(href="#") Indonesia
+            li.footer__item
+                a.footer__link(href="#") Singapore
+            li.footer__item
+                a.footer__link(href="#") HongKong
+            li.footer__item
+                a.footer__link(href="#") Canada
+
+        ul.footer__list
+            li.footer__item
+                |Help
+            li.footer__item
+                a.footer__link(href="#") Help center
+            li.footer__item
+                a.footer__link(href="#") Contact support
+            li.footer__item
+                a.footer__link(href="#") Instructions
+            li.footer__item
+                a.footer__link(href="#") How it works
