--- a/app/pages/common/header.pug
+++ b/app/pages/common/header.pug
@@ -1,8 +1,12 @@
 header.header
     .container.header__container
-        a.logo.header__logo(href="#")
+        a.logo.logo_bgc_white.header__logo(href="#")
             svg.logo__svg
                 use(xlink:href='img/sprite.svg#logo__icon')
+            //- <svg class="logo__svg" width="41" height="41" viewBox="0 0 41 41" xmlns="http://www.w3.org/2000/svg">
+            //- <circle cx="20.5" cy="20.5" r="20.5"/>
+            //- <path class="logo__symbol" d="M19.344 15.244H13.312V12.488H28.782V15.244H22.724V31H19.344V15.244Z"/>
+            //- </svg>
             span.logo__txt Trafalgar
 
         nav.nav
