Installed the swiper.js plugin, made a desktop version of the reviews section.

--- a/app/pages/includes/index/articles.pug
+++ b/app/pages/includes/index/articles.pug
@@ -1,7 +1,7 @@
 section.articles
     .container.articles__container
         .section-txt.articles__section-txt
-            h2.section-txt__title Check out our latest article
+            h2.section-txt__title.section-txt__title_black Check out our latest article
         ul.articles__list
             li.articles__item
                 .articles__img.articles__img_1
