--- a/app/pages/includes/index/services.pug
+++ b/app/pages/includes/index/services.pug
@@ -1,7 +1,7 @@
 section.services
     .container.services__container
         .section-txt.services__section-txt
-            h2.section-txt__title Our services
+            h2.section-txt__title.section-txt__title_black Our services
             p.section-txt__parag We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health
 
         svg.blot-decore
