--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -4,4 +4,5 @@ block content
     include includes/index/hero.pug
     include includes/index/services.pug
     include includes/index/download.pug
+    include includes/index/reviews.pug
     include includes/index/articles.pug
