--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
-    padding: 118px 0;
+    margin-top: 208px;
+    padding: 118px 0 108px;
     font-weight: 300;
     font-size: 18px;
     line-height: 28px;
