--- a/app/pages/includes/index/reviews.pug
+++ b/app/pages/includes/index/reviews.pug
@@ -5,29 +5,29 @@ section.reviews
                 h2.section-txt__title.section-txt__title_white What our customer are saying
             .reviews-slider.swiper-container
                 .reviews-slider__wrapper.swiper-wrapper
-                    .slide.reviews__slide.swiper-slide
-                        .pers.slide__pers
+                    .slide.swiper-slide
+                        .pers
                             .pers__ava
                             .pers__desc
                                 .pers__name Edward Newgate
                                 .pers__pos Founder Circle
                         p.slide__txt “Our dedicated patient engagement app and web portal allow you to access information instantaneously (no tedeous form, long calls, or administrative hassle) and securely”
-                    .slide.reviews__slide.swiper-slide
-                        .pers.slide__pers
+                    .slide.swiper-slide
+                        .pers
                             .pers__ava
                             .pers__desc
                                 .pers__name Edward Newgate
                                 .pers__pos Founder Circle
                         p.slide__txt “Our dedicated patient engagement app and web portal allow you to access information instantaneously (no tedeous form, long calls, or administrative hassle) and securely”
-                    .slide.reviews__slide.swiper-slide
-                        .pers.slide__pers
+                    .slide.swiper-slide
+                        .pers
                             .pers__ava
                             .pers__desc
                                 .pers__name Edward Newgate
                                 .pers__pos Founder Circle
                         p.slide__txt “Our dedicated patient engagement app and web portal allow you to access information instantaneously (no tedeous form, long calls, or administrative hassle) and securely”
-                    .slide.reviews__slide.swiper-slide
-                        .pers.slide__pers
+                    .slide.swiper-slide
+                        .pers
                             .pers__ava
                             .pers__desc
                                 .pers__name Edward Newgate
@@ -37,9 +37,9 @@ section.reviews
                 .swiper-pagination
             .slider-container
                 .slider-buttons
-                    button.button.button-next
-                        svg.button__svg
+                    button.arrow-btn.arrow-btn__next
+                        svg.arrow-btn__svg
                             use(xlink:href='img/sprite.svg#arrow_right')
-                    button.button.button-prev
-                        svg.button__svg
+                    button.arrow-btn.arrow-btn__prev
+                        svg.arrow-btn__svg
                             use(xlink:href='img/sprite.svg#arrow_right')
