--- a/app/scss/components/_reviews.scss
+++ b/app/scss/components/_reviews.scss
@@ -4,7 +4,7 @@
     &__bg {
         margin: 0 auto;
         border-radius: 24px;
-        padding: 60px 120px 86px;
+        padding: 60px 40px 82px;
         max-width: 1120px;
         color: #fff;
         background: linear-gradient(208.18deg, #67c3f3 9.05%, #5a98f2 76.74%);
@@ -14,9 +14,23 @@
         text-align: center;
     }
 
-    &-slider {
-        width: 100%;
-        height: 100%;
+    @include media(970) {
+        padding: 150px 0 30px;
+
+        &__bg {
+            padding: 20px 40px 50px;
+        }
+    }
+
+    @include media(700) {
+        margin-top: 100px;
+        padding: 0;
+        background: linear-gradient(208.18deg, #67c3f3 9.05%, #5a98f2 76.74%);
+
+        &__bg {
+            padding: 20px 0 50px;
+            background: transparent;
+        }
     }
 }
 
@@ -39,20 +53,41 @@
         &:not(:first-child) {
             margin-left: 20px;
         }
+
+        &:focus {
+            outline: none;
+        }
+    }
+
+    @include media(970) {
+        top: 150px;
+    }
+
+    @include media(700) {
+        top: 40px;
+
+        &-bullet {
+            border: 1px solid #fff;
+            opacity: 1;
+
+            &-active {
+                background-color: #fff;
+            }
+
+            &:not(:first-child) {
+                margin-left: 10px;
+            }
+        }
     }
 }
 
-.slider-buttons {
-    position: relative;
-}
-
 .swiper-button-disabled {
-    .button__svg {
+    .arrow-btn__svg {
         opacity: 0.5;
     }
 }
 
-.button {
+.arrow-btn {
     position: absolute;
     top: 250px;
     bottom: 0;
@@ -64,14 +99,14 @@
         fill: $mainColor;
     }
 
-    &-next {
-        right: 266px;
+    &__next {
+        right: 34%;
     }
 
-    &-prev {
-        left: 267px;
+    &__prev {
+        left: 34%;
 
-        .button__svg {
+        .arrow-btn__svg {
             transform: rotate(180deg);
         }
     }
@@ -79,11 +114,27 @@
     &:focus {
         outline: none;
     }
+
+    @include media(970) {
+        top: 150px;
+
+        &__next {
+            right: 30%;
+        }
+
+        &__prev {
+            left: 30%;
+        }
+    }
+
+    @include media(700) {
+        display: none;
+    }
 }
 
 .slide {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin-top: 90px;
 
     &__txt {
@@ -91,6 +142,18 @@
         font-size: 19px;
         line-height: 30px;
         color: rgba(255, 255, 255, 0.9);
+    }
+
+    @include media(970) {
+        flex-direction: column;
+        margin-top: 50px;
+
+        &__txt {
+            margin-top: 20px;
+            max-width: 100%;
+            font-size: 16px;
+            line-height: 25px;
+        }
     }
 }
 
@@ -119,5 +182,25 @@
     &__pos {
         font-size: 18px;
         color: rgba(255, 255, 255, 0.85);
+    }
+
+    @include media(970) {
+        &__ava {
+            width: 80px;
+            height: 80px;
+        }
+
+        &__desc {
+            margin-left: 20px;
+        }
+
+        &__name {
+            font-size: 18px;
+            line-height: 28px;
+        }
+
+        &__pos {
+            font-size: 14px;
+        }
     }
 }
