Added decorative elements

--- a/app/pages/common/footer.pug
+++ b/app/pages/common/footer.pug
@@ -1,4 +1,5 @@
 footer.footer
+    .dots-decore.footer__dots-decore
     .container.footer__container
         .footer__txt
             a.logo.logo_bgc_main.footer__logo(href="#")
@@ -43,3 +44,5 @@ footer.footer
                 a.footer__link(href="#") Instructions
             li.footer__item
                 a.footer__link(href="#") How it works
+
+    .dots-decore.footer__dots-decore_white
