--- a/app/pages/includes/index/articles.pug
+++ b/app/pages/includes/index/articles.pug
@@ -1,5 +1,8 @@
 section.articles
     .container.articles__container
+        .dots-decore.articles__dots-decore
+        svg.blot-decore.articles__blot-decore
+            use(xlink:href='img/sprite.svg#blot-decore')
         .section-txt.articles__section-txt
             h2.section-txt__title.section-txt__title_black Check out our latest article
         ul.articles__list
