--- a/app/pages/includes/index/download.pug
+++ b/app/pages/includes/index/download.pug
@@ -15,3 +15,5 @@ section.download
                     |Download
                     svg.download__arrow_down
                         use(xlink:href='img/sprite.svg#arrow_down')
+
+        .dots-decore.download__dots-decore
