--- a/app/pages/includes/index/hero.pug
+++ b/app/pages/includes/index/hero.pug
@@ -1,6 +1,6 @@
 section.hero
     .container.hero__container
-        .hero__dots-decore
+        .dots-decore.hero__dots-decore
         .hero__desc
             h1.hero__title Virtual healthcare for you
             p.hero__txt Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone
