--- a/app/pages/includes/index/reviews.pug
+++ b/app/pages/includes/index/reviews.pug
@@ -1,5 +1,6 @@
 section.reviews
     .container.reviews__container
+        .dots-decore.reviews__dots-decore_white
         .reviews__bg
             .section-txt.reviews__section-txt
                 h2.section-txt__title.section-txt__title_white What our customer are saying
@@ -43,3 +44,5 @@ section.reviews
                     button.arrow-btn.arrow-btn__prev
                         svg.arrow-btn__svg
                             use(xlink:href='img/sprite.svg#arrow_right')
+
+        .dots-decore.reviews__dots-decore
