--- a/app/pages/includes/index/services.pug
+++ b/app/pages/includes/index/services.pug
@@ -4,8 +4,10 @@ section.services
             h2.section-txt__title.section-txt__title_black Our services
             p.section-txt__parag We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health
 
-        svg.blot-decore
-                use(xlink:href='img/sprite.svg#blot-decore')
+        svg.blot-decore.services__blot-decore
+            use(xlink:href='img/sprite.svg#blot-decore')
+
+        .dots-decore.services__dots-decore
 
         ul.services__list
             li.card.services__card
