--- a/app/scss/components/_download.scss
+++ b/app/scss/components/_download.scss
@@ -2,6 +2,7 @@
     padding-top: 220px;
 
     &__container {
+        position: relative;
         display: flex;
         flex-direction: column;
     }
@@ -12,7 +13,7 @@
         align-items: center;
         justify-content: space-between;
 
-        &:last-child {
+        &:nth-child(2) {
             margin-top: 219px;
         }
     }
@@ -86,6 +87,14 @@
         height: 15px;
         fill: $mainColor;
         transition: 0.4s;
+    }
+
+    &__dots-decore {
+        right: -145px;
+        top: 471px;
+        width: 79px;
+        height: 113px;
+        background: url("../img/dots-decor.png") center / cover no-repeat;
     }
 
     @include media(1200) {
