Modified various points, made a mobile menu

--- a/app/pages/common/footer.pug
+++ b/app/pages/common/footer.pug
@@ -2,10 +2,10 @@ footer.footer
     .dots-decore.footer__dots-decore
     .container.footer__container
         .footer__txt
-            a.logo.logo_bgc_main.footer__logo(href="#")
+            a.logo.footer__logo(href="#home")
                 svg.logo__svg
-                    use(xlink:href='img/sprite.svg#logo__icon')
-                span.logo__txt Trafalgar
+                    use(xlink:href='img/sprite.svg#footer__icon')
+                |Trafalgar
             p.footer__parag Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone
             p.footer__copy ©Trafalgar PTY LTD 2020. All rights reserved
 
