--- a/app/pages/includes/index/articles.pug
+++ b/app/pages/includes/index/articles.pug
@@ -1,4 +1,4 @@
-section.articles
+section.articles#about
     .container.articles__container
         .dots-decore.articles__dots-decore
         svg.blot-decore.articles__blot-decore
