--- a/app/pages/includes/index/download.pug
+++ b/app/pages/includes/index/download.pug
@@ -1,4 +1,4 @@
-section.download
+section.download#apps
     .container.download__container
         .download__item
             .download__img.download__img_first
