--- a/app/pages/includes/index/reviews.pug
+++ b/app/pages/includes/index/reviews.pug
@@ -1,4 +1,4 @@
-section.reviews
+section.reviews#testimonials
     .container.reviews__container
         .dots-decore.reviews__dots-decore_white
         .reviews__bg
