--- a/app/pages/includes/index/services.pug
+++ b/app/pages/includes/index/services.pug
@@ -1,4 +1,4 @@
-section.services
+section.services#find
     .container.services__container
         .section-txt.services__section-txt
             h2.section-txt__title.section-txt__title_black Our services
