--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -17,6 +17,10 @@
         max-width: 391px;
     }
 
+    &__logo {
+        color: #fff;
+    }
+
     &__parag {
         margin-top: 22px;
     }
