--- a/app/pages/common/header.pug
+++ b/app/pages/common/header.pug
@@ -1,26 +1,35 @@
-header.header
+header.header#home
     .container.header__container
-        a.logo.logo_bgc_white.header__logo(href="#")
+        a.logo.header__logo(href="#home")
             svg.logo__svg
-                use(xlink:href='img/sprite.svg#logo__icon')
-            //- <svg class="logo__svg" width="41" height="41" viewBox="0 0 41 41" xmlns="http://www.w3.org/2000/svg">
-            //- <circle cx="20.5" cy="20.5" r="20.5"/>
-            //- <path class="logo__symbol" d="M19.344 15.244H13.312V12.488H28.782V15.244H22.724V31H19.344V15.244Z"/>
-            //- </svg>
-            span.logo__txt Trafalgar
+                use(xlink:href='img/sprite.svg#header__icon')
+            |Trafalgar
 
         nav.nav
             ul.nav__list
                 li.nav__item
-                    a.nav__link(href="#") Home
+                    a.nav__link(href="#home") Home
                 li.nav__item
-                    a.nav__link(href="#") Find a doctor
+                    a.nav__link(href="#find") Find a doctor
                 li.nav__item
-                    a.nav__link(href="#") Apps
+                    a.nav__link(href="#apps") Apps
                 li.nav__item
-                    a.nav__link(href="#") Testimonials
+                    a.nav__link(href="#testimonials") Testimonials
                 li.nav__item
-                    a.nav__link(href="#") About us
+                    a.nav__link(href="#about") About us
+
+        nav.mobile-nav
+            ul.mobile-nav__list
+                li.mobile-nav__item
+                    a.mobile-nav__link(href="#home") Home
+                li.mobile-nav__item
+                    a.mobile-nav__link(href="#find") Find a doctor
+                li.mobile-nav__item
+                    a.mobile-nav__link(href="#apps") Apps
+                li.mobile-nav__item
+                    a.mobile-nav__link(href="#testimonials") Testimonials
+                li.mobile-nav__item
+                    a.mobile-nav__link(href="#about") About us
 
         .burger
             span.burger__line
