--- a/app/scss/components/_download.scss
+++ b/app/scss/components/_download.scss
@@ -103,7 +103,7 @@
         &__item {
             justify-content: space-evenly;
 
-            &:last-child {
+            &:nth-child(2) {
                 margin-top: 100px;
             }
         }
@@ -131,7 +131,7 @@
         }
 
         &__title {
-            font-size: 25px;
+            font-size: 24px;
             line-height: 35px;
 
             &::after {
